Een hoop dingen getest

--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GIP_SB</title>
+<title>GIP Sander Backx</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+
+<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+
 </head>
+
 <body>
 
-    <h1>Sander Backx</h1>
-    <p>Much GIP, such website</p>
+<div class="banner">
+    
+    
+    <div id="bannerText">
+        <h1>Sander Backx</h1>
+    </div>
+</div>
+
+    <div class="parallax"></div>
+
+    <ul class="flex-container">
+        <li class="flex-item">1</li>
+        <li class="flex-item">2</li>
+        <li class="flex-item">3</li>
+        <li class="flex-item">4</li>
+        <li class="flex-item">5</li>
+        <li class="flex-item">6</li>
+    </ul>
+
+
+
 
 </body>
+
 </html>
