--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <Head>
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+<link rel="stylesheet" href="https://yui-s.yahooapis.com/pure/0.6.0/pure-min.css">
 <link rel="stylesheet" type="text/css" href="CSS/css.css">
 
 
@@ -10,7 +10,7 @@
 
 
 	<div class="pure-menu pure-menu-horizontal">
-		<h1 id="titel">Sjabloom</h1>
+		<h1 id="titel">Sjabloon</h1>
 		<ul class="pure-menu-list">
 			<li class="pure-menu-selected pure-menu-item "><a href="#" class="pure-menu-link">Home</a></li>
 			<li class="pure-menu-item"><a href="pagina2.html" class="pure-menu-link">Pagina 2</a></li>
