--- a/pagina3.html
+++ b/pagina3.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <Head>
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+<link rel="stylesheet" href="https://yui-s.yahooapis.com/pure/0.6.0/pure-min.css">
 <link rel="stylesheet" type="text/css" href="CSS/css.css">
 
 </head>
 <body>
     <div class="pure-menu pure-menu-horizontal">
-		<h1 id="titel">Sjabloom</h1>
+		<h1 id="titel">Sjabloon</h1>
 		<ul class="pure-menu-list">
 			<li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
 			<li class="pure-menu-item pure-menu-selected"><a href="pagina2.html" class="pure-menu-link">Pagina 2</a></li>
