--- a/pagina2.html
+++ b/pagina2.html
@@ -14,7 +14,7 @@
 			<li class="pure-menu-item "><a href="pagina3.html" class="pure-menu-link">Pagina 3</a></li>			
 		</ul>
 		</div>
-        <p id= "contact"> Wow random tekst <br>
+        <p id= "p2tekst"> Wow random tekst <br>
         :) <br>
         :)</p>
 </body>
