--- a/index.html
+++ b/index.html
@@ -8,42 +8,47 @@
 </head>
 <body>
 
+    <header>
+        <div class="pure-menu pure-menu-horizontal">
+            <h1 id="titel">Sjabloon</h1>
+            <ul class="pure-menu-list">
+                <li class="pure-menu-selected pure-menu-item "><a href="#" class="pure-menu-link">Home</a></li>
+                <li class="pure-menu-item"><a href="pagina2.html" class="pure-menu-link">Pagina 2</a></li>
+                <li class="pure-menu-item"><a href="pagina3.html" class="pure-menu-link">Pagina 3</a></li>
+            </ul>
+        </div>
+    </header>
+    
+    <section id="top">
+        <div class="pure-g">
+            <div id="HomeTekst" class="pure-u-1-3">
 
-	<div class="pure-menu pure-menu-horizontal">
-		<h1 id="titel">Sjabloon</h1>
-		<ul class="pure-menu-list">
-			<li class="pure-menu-selected pure-menu-item "><a href="#" class="pure-menu-link">Home</a></li>
-			<li class="pure-menu-item"><a href="pagina2.html" class="pure-menu-link">Pagina 2</a></li>
-			<li class="pure-menu-item"><a href="pagina3.html" class="pure-menu-link">Pagina 3</a></li>
-		</ul>
-		
-		</div>
-	<div class="pure-g">
-		<div id= "HomeTekst" class="pure-u-1-3">
-			
-				<p>Blok 1:<br>
-				</p>Hier kan ik<br>
-				Een hop tekst zetten <br>
-				Dankzij een grid van <br>
-				Purecss	
-				</p>
-				
-			</div>
-		<div class="pure-u-1-3">	
-			<div class="hoofd">
-				<h2 class="hoofd-tekst">
-					Hier kan ik<br>
-					Een mooie slagzin zetten
-				</h2>
-			</div>
-		</div>
-		<div id="HomeTekst" class="pure-u-1-3">
-			<p>Een derde vak in het grid<br>
-			Voor nog meer teksts of<br>
-			andere elementen! <strong>Random strong appeares</strong>.</p>
-		</div>
-	</div>
-	
+                <p>
+                    Blok 1:<br>
+                </p>Hier kan ik<br>
+                Een hoop tekst zetten <br>
+                Dankzij een grid van <br>
+                Purecss
+                </p>
+
+            </div>
+            <div class="pure-u-1-3">
+                <div class="hoofd">
+                    <h2 class="hoofd-tekst">
+                        Hier kan ik<br>
+                        Een mooie slagzin zetten
+                    </h2>
+                </div>
+            </div>
+            <div id="HomeTekst" class="pure-u-1-3">
+                <p>
+                    Een derde vak in het grid<br>
+                    Voor nog meer teksts of<br>
+                    andere elementen! <strong>Random strong appeares</strong>.
+                </p>
+            </div>
+        </div>
+    </section>
 	<a  class="button-secondary pure-button" href="#">Random button</a>
 	</div>
 <footer>Wow dit zijn kleine lettertjes</footer>
