--- a/blog.html
+++ b/blog.html
@@ -10,12 +10,18 @@
 		<h1 id="titel">Sjabloon</h1>
 		<ul class="pure-menu-list">
 			<li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
-			<li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Pagina 2</a></li>
+			<li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Blog</a></li>
 			<li class="pure-menu-item "><a href="pagina3.html" class="pure-menu-link">Pagina 3</a></li>			
 		</ul>
 		</div>
-        <p id= "p2tekst"> Wow random tekst <br>
-        :) <br>
-        :)</p>
+        <section id="stageverslag">
+			<ul class="flex-container">
+			<li class="flex-item" href="#">Dag 1</li>
+			<li class="flex-item" href="#">Dag 2</li>
+			<li class="flex-item" href="#">Dag 3</li>
+			<li class ="flex-item" href="#">Dag 4</li>
+      </ul>
+
+		</section>
 </body>
 </html>
