--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 id="titel">Sjabloon</h1>
             <ul class="pure-menu-list">
                 <li class="pure-menu-selected pure-menu-item "><a href="#" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="pagina2.html" class="pure-menu-link">Pagina 2</a></li>
+                <li class="pure-menu-item"><a href="blog.html" class="pure-menu-link">Blog</a></li>
                 <li class="pure-menu-item"><a href="pagina3.html" class="pure-menu-link">Pagina 3</a></li>
             </ul>
         </div>
